--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,4 @@ License: MIT + file LICENSE
 BugReports: https://github.com/meantrix/leaflet.multiopacity/issues
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.1.1
