--- a/.github/workflows/pkgdown.yml
+++ b/.github/workflows/pkgdown.yml
@@ -1,6 +1,6 @@
 on:
   push:
-    branches: master
+    branches: main
 
 name: pkgdown
 
@@ -40,7 +40,7 @@ jobs:
       - name: Install package
         run: R CMD INSTALL .
 
-      - name: Deploy package
+      - name: Deploy package documentation
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
